# vidiotic

./: .gitignore  Cargo.toml  README.md
docs/: M4-plan.md  camera-source-plan.md  effect-chain-fx-requests.md  effect-chain-plan.md  egui-elegance-plan.md  recanon-plan.md  review-fixes-plan.md
examples/isf_aesthetics/: console.rs  elektron.rs  everforest.rs  hybrid.rs  main.rs  makenoise.rs  moog.rs  nf.rs  phosphor.rs  schema.rs  terminal.rs  util.rs
licenses/: README.md  devicons.MIT.txt  material-design-icons.Apache-2.0.txt  weather-icons.OFL-1.1.txt
phosphor/: Cargo.toml
phosphor/src/: icon.rs  lib.rs  theme.rs  widgets.rs
shaders/: audio-scope.frag  chroma-punch.frag  demo-demo.frag  demo.frag  edge-neon.frag  fullscreen.vert  fullscreen.wgsl  glitch-vhs.frag  isf-audio.fs  isf-bloom.fs  isf-feedback.fs  isf-halftone.fs  isf-hue.fs  isf-mirror.fs  isf-smear.fs  kaleido.frag  pixellate.frag  posterize.frag  preamble.frag  spectrum-warp.frag  strobe.frag  tile.frag  tunnel.frag  wave-warp.frag
shaders/vidvox/: Chromatic Aberration.fs  JPEG Block Corruption.fs  README.md
src/: analysis.rs  app.rs  audio.rs  bank.rs  clippool.rs  clock.rs  commands.rs  control_input.rs  gfx.rs  isf.rs  lib.rs  main.rs  project.rs  render.rs  sequencer.rs  shader.rs  shaderwatch.rs  transcode.rs  ui.rs
src/ui/: editor.rs  library.rs  mod.rs  status.rs  theme.rs  transport.rs  widgets.rs
src/video/: capture.rs  decoder.rs  frame.rs  hap.rs  mod.rs
tests/: bc1_micro.rs
