[package]
name = "vidiotic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vidiotic"
path = "src/main.rs"

[[bin]]
name = "spike_naga"
path = "src/bin/spike_naga.rs"

[[bin]]
name = "spike_render"
path = "src/bin/spike_render.rs"

[[bin]]
name = "spike_decode"
path = "src/bin/spike_decode.rs"

[dependencies]
ffmpeg-next = "8.1"
crossbeam-channel = "0.5"
naga = { version = "29", features = ["glsl-in", "wgsl-in"] }
snap = "1.1"
wgpu = { version = "29", features = ["glsl", "naga-ir"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
cpal = "0.18"
texpresso = { version = "2.0", features = ["rayon"] }
rustfft = "6"
triple_buffer = "9"
rtrb = "0.3"
winit = "0.30.13"
notify = "8.2"
clap = { version = "4", features = ["derive"] }
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = { version = "0.35", default-features = false, features = ["links"] }
rfd = "0.15"
rusty_link = "0.4"
