[package]
name = "vidiotic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vidiotic"
path = "src/main.rs"

[[bin]]
name = "spike_naga"
path = "src/bin/spike_naga.rs"

[[bin]]
name = "spike_render"
path = "src/bin/spike_render.rs"

[[bin]]
name = "spike_decode"
path = "src/bin/spike_decode.rs"

# The transcode hot path (BC1 block compression, its rayon fan-out, and snappy
# framing) is drastically slower unoptimized — build it optimized even in dev.
[profile.dev.package.texpresso]
opt-level = 3
debug-assertions = false
overflow-checks = false
[profile.dev.package.rayon]
opt-level = 3
[profile.dev.package.rayon-core]
opt-level = 3
[profile.dev.package.snap]
opt-level = 3

[dependencies]
ffmpeg-next = "8.1"
crossbeam-channel = "0.5"
naga = { version = "29", features = ["glsl-in", "wgsl-in"] }
snap = "1.1"
wgpu = { version = "29", features = ["glsl", "naga-ir"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
cpal = "0.18"
texpresso = { version = "2.0", features = ["rayon"] }
rustfft = "6"
triple_buffer = "9"
rtrb = "0.3"
winit = "0.30.13"
notify = "8.2"
clap = { version = "4", features = ["derive"] }
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = { version = "0.35", default-features = false, features = ["links"] }
rfd = "0.15"
rusty_link = "0.4"
nanoserde = "0.2"

# A curated subset of clippy's pedantic tier. The blanket tier is not enabled:
# the numeric-cast lints are noise in graphics/DSP code, and the must-use /
# const-fn candidates are churn without payoff here.
[lints.clippy]
use_self = "warn"
redundant_clone = "warn"
doc_markdown = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
